[project]
name = "airas"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "qdrant-client>=1.7",
    "sentence-transformers>=2.2",
    "hdbscan>=0.8",
    "numpy>=1.24",
    "scipy>=1.10",
    "rich>=13.0",
    "httpx>=0.27",
    "zstandard>=0.22",
    "bcrypt>=4.1",
    "datasets>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
